# aether-multimodal-os

./: .env.example  .gitignore  Makefile  README.md  aether_kernel.py  constitutional_governance.py  docker-compose.yml  multimodal_fusion_engine.py  persistent_memory_graph.py  pyproject.toml  reasoning_engine.py  sitecustomize.py
.github/workflows/: ci.yml  pages.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: demo-state.json  manifest.webmanifest  service-worker.js
dashboard/src/: App.tsx  main.tsx  styles.css
docs/: api.md  benchmark-plan.md  runbook.md  security-audit.md
docs/adr/: 0001-monorepo-microservices.md  0002-governance-first-orchestration.md
infra/docker/: dashboard.Dockerfile  python-service.Dockerfile  start-python-service.sh
infra/helm/aether-os/: Chart.yaml  values-production.yaml  values.yaml
infra/observability/: prometheus.yml
proto/: aether.proto
scripts/: demo-local.sh  start-local.sh  stop-local.sh
services/: __init__.py
services/action/: __init__.py
services/action/app/: __init__.py  main.py  orchestrator.py
services/fusion/: __init__.py
services/fusion/app/: __init__.py  engine.py  main.py
services/governance/: __init__.py
services/governance/app/: __init__.py  (+2 more)
services/kernel/: __init__.py
services/memory/: __init__.py
services/realtime/: __init__.py
services/reasoning/: __init__.py
tests/integration/: test_api_contracts.py
tests/unit/: test_action.py  test_event_bus.py  test_fusion.py  test_governance.py  test_kernel.py  test_memory.py  test_reasoning.py
(+43 files in other folders)
